--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
 
 <body>
 <div class="header text-center">
-    <h1>Welcome to the Video Game Shop</h1>
+    <h1>Welcome to the FANDO Games</h1>
     <p>Your one-stop destination for the latest video games!</p>
 </div>
 
@@ -95,7 +95,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="https://i.ytimg.com/vi/wNt8JS99PrY/maxresdefault.jpg">
+                        <img src="https://i.ytimg.com/vi/wNt8JS99PrY/maxresdefault.jpg" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Zombie Apocalypse</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, iure. Recusandae amet quisquam expedita ipsum mollitia tenetur, nulla voluptatem explicabo assumenda, neque ullam earum cupiditate similique atque suscipit! Doloremque, atque?</p>
