--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -1,9 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/head :: head('Details')"></head>
 
 <body>
-
 
 
 </body>
