--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -1,9 +1,59 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/head :: head('Details')"></head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+          crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous" defer></script>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+          integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <title>Game Details</title>
+</head>
 
-<body>
+<body class="bg-light">
+<!-- Navbar fragment qui -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" th:href="@{/}">Home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav"></div>
+    </div>
+</nav>
 
+<div class="container mt-4 mt-lg-5 d-flex flex-column justify-content-center align-items-center">
+    <h1 class="text-center mb-5">Game Details</h1>
+    <div class="row justify-content-center align-items-start">
+        <!-- Image container -->
+        <div class="col-lg-4">
+            <img alt="game-img" class="img-fluid border border-secondary" th:src="${game.photo}" >
+        </div>
+        <!-- Info container -->
+        <div class="col-lg-8">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title" th:text="${game.title}"></h5>
+                    <h5 class="card-title"> </h5>
+                    <p class="card-text" th:text="${game.editor}"></p>
+                    <p class="card-text" th:text="${game.description}"></p>
+                    <p class="card-text" th:text="|Price: €${game.price}|"></p>
+                    <!-- Button per acquistare -->
+                    <a class="btn btn-secondary" th:href="@{/}">Buy</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
