--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -17,7 +17,7 @@
           integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link href="https://fonts.googleapis.com/css2?family=Aclonica&family=Fredoka&display=swap" rel="stylesheet">
-    <link rel="stylesheet" th:href="@{/styles.css}"/>
+    <link th:if="${title == 'crea/modifica videogiochi'}" rel="stylesheet" th:href="@{/styles.css}"/>
     <title th:text="${title}"></title>
 </head>
 <body>
