aggiunto slides alla homepage.

--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -5,7 +5,7 @@
 <body>
 <nav th:replace="fragments/navbar :: navbar"></nav>
 
-<div class="container mt-4 mt-lg-5">
+<div class="container mt-4 mt-lg-5 text-center">
     <h1 class="text-center my-3">TUTTI I GIOCHI</h1>
 
     <div id="carouselExample" class="carousel slide">
