--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -12,22 +12,20 @@
         <div class="carousel-inner">
             <div th:each="g, status : ${game}" class="carousel-item"
                  th:classappend="${status.index == 0} ? 'active' : ''">
-                >
                 <img alt="game-img" class="img-fluid border border-secondary" th:src="${g.photo}">
                 <h5 class="card-title" th:text="${g.title}"></h5>
                 <button type="submit" class="btn btn-primary" th:href="@{/show/{id}(id=${g.id})}">Dettagli</button>
             </div>
         </div>
-        <button class="carousel-control-prev btn-dark" type="button" data-bs-target="#carouselExample"
+        <button class="carousel-control-prev opacity-100 bg-dark" type="button" data-bs-target="#carouselExample"
                 data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="false"></span>
-            <span>Previous</span>
+            <span class="carousel-control-prev-icon"></span>
         </button>
-        <button class="carousel-control-next btn-dark" type="button" data-bs-target="#carouselExample"
+        <button class="carousel-control-next opacity-100 bg-dark " type="button" data-bs-target="#carouselExample"
                 data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="false"></span>
-            <span>Next</span>
+            <span class="carousel-control-next-icon"></span>
         </button>
+
     </div>
 
     <!---aggiungere th:if per dividere la lista giochi in base alla console-->
