--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -14,7 +14,9 @@
                  th:classappend="${status.index == 0} ? 'active' : ''">
                 <img alt="game-img" class="img-fluid border border-secondary" th:src="${g.photo}">
                 <h5 class="card-title" th:text="${g.title}"></h5>
-                <button type="submit" class="btn btn-primary" th:href="@{/show/{id}(id=${g.id})}">Dettagli</button>
+                <a class="btn btn-primary" th:href="@{/show/{id}(id=${g.id})}">
+                    Dettagli
+                </a>
             </div>
         </div>
         <button class="carousel-control-prev opacity-100 bg-dark" type="button" data-bs-target="#carouselExample"
