sistemato colore icon navbar.

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -18,16 +18,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/}"> <i class="fa-solid fa-house px-1"
-                                                                                      style="color: #ffffff;"></i> Home</a>
+                    <a class="nav-link active" aria-current="page" th:href="@{/}"> <i class="fa-solid fa-house"
+                                                                                      style="color: #0042aa;"></i> Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> <i class="fa-solid fa-user px-1" style="color: #ffffff;"></i> Accedi
+                    <a class="nav-link" href="#"> <i class="fa-solid fa-user px-1" style="color: #0042aa;"></i> Accedi
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><i class="fa-solid fa-screwdriver-wrench px-1"
-                                                    style="color: #ffffff;"></i> Area Riservata</a>
+                                                    style="color: #0042aa;"></i> Area Riservata</a>
                 </li>
             </ul>
 
