--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -93,7 +93,7 @@
             <button class="btn btn-primary" type="submit">SALVA</button>
         </div>
         <div class="col-12 text-center">
-            <a class="btn btn-primary" th:href="@{/}">CANCELLA</a>
+            <a class="btn btn-primary mb-3" th:href="@{/}">CANCELLA</a>
         </div>
 
 
