--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -29,6 +29,10 @@
                     <a class="nav-link" href="#"><i class="fa-solid fa-screwdriver-wrench px-1"
                                                     style="color: #0042aa;"></i> Area Riservata</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/create}"><i class="fa-solid fa-plus" style="color: #0042aa;"></i>
+                        Aggiungi Videogioco</a>
+                </li>
             </ul>
 
             <form class="d-flex" role="search">
