--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -22,7 +22,7 @@
                                                                                       style="color: #0042aa;"></i> Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> <i class="fa-solid fa-user px-1" style="color: #0042aa;"></i> Accedi
+                    <a class="nav-link" href="#"> <i class="fa-solid fa-user px-1" th:href="@{/login}" style="color: #0042aa;"></i> Accedi
                     </a>
                 </li>
                 <li class="nav-item">
