--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,30 +4,61 @@
 </head>
 <body>
 <nav th:replace="fragments/navbar :: navbar"></nav>
-    <div class="container m-5 text-center">
-        <div class="row">
-            <div class="col-md-6 offset-md-3">
-                <div class="login-container">
-                    <h2 class="text-center">Login</h2>
-                    <form>
-                        <div class="form-group">
-                            <label for="username">Username</label>
-                            <input type="text" class="form-control" id="username" placeholder="Enter your username" required>
+<section class="vh-100" style="background-color: #9A616D;">
+    <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col col-xl-10">
+                <div class="card" style="border-radius: 1rem;">
+                    <div class="row g-0">
+                        <div class="col-md-6 col-lg-5 d-none d-md-block">
+                            <img src="https://i.pinimg.com/1200x/d5/45/d2/d545d2155b05a0a059bff216e8e94fd2.jpg"
+                                 alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;"/>
                         </div>
-                        <div class="form-group">
-                            <label for="password">Password</label>
-                            <input type="password" class="form-control" id="password" placeholder="Enter your password" required>
+                        <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                            <div class="card-body p-4 p-lg-5 text-black">
+
+                                <form>
+
+                                    <div class="d-flex align-items-center mb-3 pb-1">
+                                        <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+                                        <a class="navbar-brand fw-bold ">fando<span
+                                                class="text-primary">games</span></a>
+                                    </div>
+
+                                    <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Accedi al tuo
+                                        account</h5>
+
+                                    <div class="form-outline mb-4">
+                                        <label class="form-label" for="form2Example17">Email</label>
+                                        <input type="email" id="form2Example17" class="form-control form-control-lg"/>
+                                    </div>
+
+                                    <div class="form-outline mb-4">
+                                        <label class="form-label" for="form2Example27">Password</label>
+                                        <input type="password" id="form2Example27"
+                                               class="form-control form-control-lg"/>
+                                    </div>
+
+                                    <div class="pt-1 mb-4">
+                                        <button class="btn btn-dark btn-lg btn-block" type="button">Login</button>
+                                    </div>
+
+                                    <a class="small text-muted" href="#!">Hai dimenticato la password?</a>
+                                    <p class="mb-5 pb-lg-2" style="color: #393f81;">Non hai un account? <a href="#!"
+                                                                                                           style="color: #393f81;">Registrati
+                                        qui</a></p>
+                                    <a href="#!" class="small text-muted">Condizioni d'uso.</a>
+                                    <a href="#!" class="small text-muted">Informativa sulla privacy</a>
+                                </form>
+
+                            </div>
                         </div>
-                        <button type="submit" class="btn btn-primary btn-block">Login</button>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</section>
 
 </body>
 </html>
