--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -27,10 +27,10 @@
                     <div class="d-flex align-items-center">
                         <a class="btn btn-black border-black mx-2 " th:href="@{/}"><i
                                 class="fa-solid fa-cart-shopping"></i></a>
-                        <a th:href="@{/edit/{id} (id=${game.id})}" class="btn btn-primary mx-2"><i
+                        <a class="btn btn-primary mx-2" th:href="@{/edit/{id} (id=${game.id})}"><i
                                 class="fa-solid fa-pen-to-square"></i></a>
-                        <form th:action="@{/delete/{id}(id=${game.id})}" method="post">
-                            <button type="submit" class="btn btn-danger mx-2"><i
+                        <form method="post" th:action="@{/delete/{id}(id=${game.id})}">
+                            <button class="btn btn-danger mx-2" type="submit"><i
                                     class="fa-solid fa-trash"></i></button>
                         </form>
                     </div>
@@ -39,6 +39,9 @@
         </div>
     </div>
 </div>
+
+<nav th:replace="fragments/footer"></nav>
+
 
 </body>
 </html>
