--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <!-- Box dei dettagli -->
-        <div class="col-md-6 d-flex" style="height: 42px;">
+        <div class="col-md-6 d-flex" style="height: 420px;">
             <div class="card w-100 border-black">
                 <div class="card-body">
                     <h5 class="card-title" th:text="${game.title}"></h5>
@@ -26,8 +26,8 @@
                     <p class="card-text" th:text="${game.description}"></p>
                     <p class="card-text" th:text="${game.console}"></p>
                     <p class="card-text" th:text="|Prezzo: €${game.price}|"></p>
-                    <div class="d-flex align-items-center mb-2 ">
-                        <a class="btn btn-black border-black mx-2 " th:href="@{/purchase}"><i
+                    <div class="d-flex align-items-center">
+                        <a class="btn btn-black border-black mx-2 " th:href="@{/}"><i
                                 class="fa-solid fa-cart-shopping"></i></a>
                         <a class="btn btn-primary mx-2" th:href="@{/edit/{id} (id=${game.id})}"><i
                                 class="fa-solid fa-pen-to-square"></i></a>
