parte console quasi pronta.

--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -17,14 +17,18 @@
             </div>
         </div>
         <!-- Box dei dettagli -->
-        <div class="col-md-6 d-flex" style="height: 420px;">
+        <div class="col-md-6 d-flex" style="height: 450px;">
             <div class="card w-100 border-black">
                 <div class="card-body">
                     <h5 class="card-title" th:text="${game.title}"></h5>
                     <p class="card-text" th:text="${game.editor}"></p>
                     <p class="card-text" th:text="${game.genre}"></p>
                     <p class="card-text" th:text="${game.description}"></p>
-                    <p class="card-text" th:text="${game.console}"></p>
+                    <div>
+                        <ul>
+                            <li th:each="c : ${game.consoleList}" th:text="${c.console}"></li>
+                        </ul>
+                    </div>
                     <p class="card-text" th:text="|Prezzo: €${game.price}|"></p>
                     <div class="d-flex align-items-center">
                         <a class="btn btn-black border-black mx-2 " th:href="@{/}"><i
