--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -86,24 +86,15 @@
 
         <div class="col-md-12">
             <label for="console" class="form-label">Console</label>
-            <select id="console" class="form-select" th:field="*{console}" th:errorClass="is-invalid">
-                <option value="" selected>---Seleziona tipo di console---</option>
-                <option value="1">PlayStation 5</option>
-                <option value="2">PlayStation 4</option>
-                <option value="3">Nintendo Switch</option>
-                <option value="4">Xbox</option>
-            </select>
-            <div class="invalid-feedback" th:if="${#fields.hasErrors('console')}">
-                <ul>
-
-                    <li th:each="err : ${#fields.errors('console')}" th:text="${err}">
-                    </li>
-                </ul>
+            <div class="form-check" id="console" th:each="c : ${console}">
+                <input class="form-check-input" type="checkbox" th:value="${c.id}"
+                       th:id="|console_${c.id}|" th:field="*{consoleList}">
+                <label class="form-check-label" th:for="|console_${c.id}|" th:text="${c.console}"></label>
             </div>
         </div>
 
         <div class="col-md-12">
-            <label for="description" class="form-label">Prezzo</label>
+            <label for="price" class="form-label">Prezzo</label>
             <div class="input-group mb-3">
                 <span class="input-group-text">€</span>
                 <span class="input-group-text">0.00</span>
